--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     			<div class="blurb">
         			<h1>Hi, I'm Manfred Hanser!</h1>
 		    		<p>This personal website is under development. Stay tuned!</p>
-			</div><!-- /.blurb -->
-		</div><!-- /.container -->
+			</div>
+		</div>
 	</body>
 </html>
