--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+	"http://www.w3.org/TR/html4/loose.dtd">
+
 <html>
 	<head>
 		<title>Manfred Hanser</title>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
