--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <html>
 	<head>
-		<title>Manfred Hanser</title>
+		<title>hanser.xyz</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
